# openvps

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  mppx.config.js
api/: .env.testnet  Cargo.toml
api/src/: config.rs  main.rs  tests.rs
api/src/db/: mod.rs  models.rs
api/src/firecracker/: client.rs  models.rs
api/src/mpp/: challenge.rs  credential.rs  middleware.rs  mod.rs  receipt.rs
api/src/network/: ip_pool.rs  mod.rs  tap.rs
api/src/routes/: discovery.rs  health.rs  jobs.rs  mod.rs  provision.rs  v2.rs  vm.rs
api/src/vm/: manager.rs
api/src/x402/: facilitator.rs  mod.rs  types.rs
dashboard/: index.html
infra/: download-assets.sh  lima-firecracker.yaml  setup-host.sh  setup-network.sh
infra/terraform/: cloud-init.yaml  main.tf  outputs.tf  variables.tf
site/: index.html  llms.txt  skill.md
skills/: jobs-generic.md  test-javascript.md  test-python.md  test-rust.md  test-solidity.md
